[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/rock.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/scissor.png" type="Texture" id=3]
[ext_resource path="res://assets/paper.png" type="Texture" id=4]
[ext_resource path="res://assets/Confusion.png" type="Texture" id=5]
[ext_resource path="res://LittleMe.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 27 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 210.685, 250.372 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
little_me_scene = ExtResource( 6 )

[node name="TransformTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Canvas" type="CanvasModulate" parent="."]

[node name="Scissor" type="Sprite" parent="Canvas"]
visible = false
texture = ExtResource( 3 )

[node name="Paper" type="Sprite" parent="Canvas"]
visible = false
position = Vector2( -2.44998, 0.222733 )
texture = ExtResource( 4 )

[node name="Rock" type="Sprite" parent="Canvas"]
visible = false
position = Vector2( -2.89542, 1.55908 )
texture = ExtResource( 1 )

[node name="Confusion" type="Sprite" parent="Canvas"]
visible = false
position = Vector2( -2.00452, -0.44545 )
texture = ExtResource( 5 )

[node name="LittleMeTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.886383, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.886383, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="TransformTimer" to="." method="_on_TransformTimer_timeout"]
[connection signal="timeout" from="LittleMeTimer" to="." method="_on_LittleMeTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Player_area_entered"]
